--- a/package.json
+++ b/package.json
@@ -13,7 +13,18 @@
   ],
   "author": "yoannspace",
   "license": "Apache-2.0",
+  "scripts": {
+    "build": "wp-scripts build"
+  },
   "dependencies": {
-    "@wordpress/plugins": "^2.2.0"
+    "@wordpress/plugins": "^2.7.2"
+  },
+  "devDependencies": {
+    "@wordpress/scripts": "^3.4.0",
+    "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.3.1",
+    "webpack": "^4.41.2"
   }
 }
